--- a/_includes/research-topics.html
+++ b/_includes/research-topics.html
@@ -1,5 +1,5 @@
 {% assign research-topics = site.data.data.research-topics %}
-{% if projects %}
+{% if research-topics %}
 <section class="section research-topics-section">
 
   <h2 class="section-title">
